[gd_scene load_steps=9 format=3 uid="uid://chprd2h0vilr1"]

[ext_resource type="Texture2D" uid="uid://ccylp330sr4p7" path="res://assets/textures/temp-tilesheet.png" id="1_2rnmv"]
[ext_resource type="Script" path="res://src/entities/crop/Plant.gd" id="1_oaf2o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dsccf"]
atlas = ExtResource("1_2rnmv")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p88e"]
atlas = ExtResource("1_2rnmv")
region = Rect2(160, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vmej"]
atlas = ExtResource("1_2rnmv")
region = Rect2(144, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vxt56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsccf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p88e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vmej")
}],
"loop": false,
"name": &"grow",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_13cuv"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r2dq1"]
radius = 64.0

[node name="Plant" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_oaf2o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_vxt56")
animation = &"grow"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_13cuv")
debug_color = Color(0.993769, 0, 0.232595, 0.42)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_r2dq1")
debug_color = Color(2.5028e-06, 0.625417, 0.520383, 0.42)

[node name="GrowTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
